--- a/stylesheets/TaKo.notifications.styl
+++ b/stylesheets/TaKo.notifications.styl
@@ -40,6 +40,11 @@ div[data-element="notification"]
       margin-top 0%
       opacity 1
 
+    &.success, &.error
+
+      & .title
+        padding-top 0.3em
+
     & *
       display block
       text-align left
