--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -76,3 +76,13 @@ div[data-element="aside_background"]
 
   &.horizontal
     overflow-x scroll
+
+.progress_bar
+  width 100%
+  height 10px
+  display block
+
+  & .percent
+    height inherit
+    display block
+    transition-duration PROGRESSBAR_TRANSITION_TIME
