--- a/stylesheets/TaKo.constants.styl
+++ b/stylesheets/TaKo.constants.styl
@@ -13,6 +13,8 @@ SECTION_TRANSITION_TIME         = 300ms
 NOTIFICATION_TRANSITION         = 570px
 NOTIFICATION_TRANSITION_TIME    = 500ms
 
+PROGRESSBAR_TRANSITION_TIME     = 500ms
+
 FOOTER_HEIGHT                   = 65px
 
 FONT_SIZE_SMALLEST              = 11px
