--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -122,6 +122,11 @@ div[data-element="notification"] > div.window
   &.error .icon
     color FAIL
 
+.progress_bar
+  background-color lighten(ASIDE, 30%)
+
+  & .percent
+    background-color THEME
 
 
 
