--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -14,6 +14,8 @@ div[data-element="aside_background"].show{background-color:#000;opacity:.6;z-ind
 .onright{float:right}
 .scroll.vertical{overflow-y:scroll}
 .scroll.horizontal{overflow-x:scroll}
+.progress_bar{width:100%;height:10px;display:block;}
+.progress_bar .percent{height:inherit;display:block;-webkit-transition-duration:500ms;-moz-transition-duration:500ms;-ms-transition-duration:500ms;-o-transition-duration:500ms;transition-duration:500ms}
 
 section{height:inherit;width:inherit;position:absolute;z-index:0;top:0;left:0;opacity:0;-webkit-transition-duration:300ms;-moz-transition-duration:300ms;-ms-transition-duration:300ms;-o-transition-duration:300ms;-webkit-transition-duration:300ms;-moz-transition-duration:300ms;-ms-transition-duration:300ms;-o-transition-duration:300ms;transition-duration:300ms;}
 section.active{opacity:1;z-index:100}
@@ -135,3 +137,5 @@ div[data-element="notification"] > div.window.success .title,div[data-element="n
 div[data-element="notification"] > div.window.success .icon,div[data-element="notification"] > div.window.error .icon{font-weight:bold}
 div[data-element="notification"] > div.window.success .icon{color:#1eb815}
 div[data-element="notification"] > div.window.error .icon{color:#ed1c13}
+.progress_bar{background-color:#6d6d6d;}
+.progress_bar .percent{background-color:#f60}
