Added loading css

--- a/stylesheets/vendor.styl
+++ b/stylesheets/vendor.styl
@@ -15,6 +15,21 @@ vendorValue(prop, args)
 animation()
   vendor('animation', arguments)
 
+animation-name()
+  vendor('animation-name', arguments)
+
+animation-duration()
+  vendor('animation-duration', arguments)
+
+animation-iteration-count()
+  vendor('animation-iteration-count', arguments)
+
+animation-direction()
+  vendor('animation-direction', arguments)
+
+animation-delay()
+  vendor('animation-delay', arguments)
+
 animation-fill-mode()
   vendor('animation-fill-mode', arguments)
 
