--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -80,6 +80,27 @@ aside ul > li.separator{background-color:rgba(0,0,0,0.1);color:#fff;padding:1px 
 .box_8{-webkit-box-flex:8;-moz-box-flex:8;-ms-box-flex:8;-o-box-flex:8;box-flex:8}
 .box_9{-webkit-box-flex:9;-moz-box-flex:9;-ms-box-flex:9;-o-box-flex:9;box-flex:9}
 
+#circular3dG{position:relative;width:128px;height:128px}
+.circular3dG{position:absolute;background-color:#000;width:35.55555555555556px;height:35.55555555555556px;-webkit-border-radius:50%;-moz-border-radius:50%;-ms-border-radius:50%;-o-border-radius:50%;border-radius:50%;-webkit-animation-name:bounce_circular3dG;-moz-animation-name:bounce_circular3dG;-ms-animation-name:bounce_circular3dG;-o-animation-name:bounce_circular3dG;animation-name:bounce_circular3dG;-webkit-animation-duration:1.28s;-moz-animation-duration:1.28s;-ms-animation-duration:1.28s;-o-animation-duration:1.28s;animation-duration:1.28s;-webkit-animation-iteration-count:infinite;-moz-animation-iteration-count:infinite;-ms-animation-iteration-count:infinite;-o-animation-iteration-count:infinite;animation-iteration-count:infinite;-webkit-animation-direction:linear;-moz-animation-direction:linear;-ms-animation-direction:linear;-o-animation-direction:linear;animation-direction:linear}
+#circular3d_1G{left:52px;top:8px;-webkit-animation-delay:.4800000000000001s;-moz-animation-delay:.4800000000000001s;-ms-animation-delay:.4800000000000001s;-o-animation-delay:.4800000000000001s;animation-delay:.4800000000000001s}
+#circular3d_2G{left:78px;top:30px;-webkit-animation-delay:.64s;-moz-animation-delay:.64s;-ms-animation-delay:.64s;-o-animation-delay:.64s;animation-delay:.64s}
+#circular3d_3G{left:94px;top:58px;-webkit-animation-delay:.8s;-moz-animation-delay:.8s;-ms-animation-delay:.8s;-o-animation-delay:.8s;animation-delay:.8s}
+#circular3d_4G{left:88px;top:86px;-webkit-animation-delay:.9600000000000002s;-moz-animation-delay:.9600000000000002s;-ms-animation-delay:.9600000000000002s;-o-animation-delay:.9600000000000002s;animation-delay:.9600000000000002s}
+#circular3d_5G{left:54px;top:94px;-webkit-animation-delay:1.12s;-moz-animation-delay:1.12s;-ms-animation-delay:1.12s;-o-animation-delay:1.12s;animation-delay:1.12s}
+#circular3d_6G{left:10px;top:62px;-webkit-animation-delay:1.28s;-moz-animation-delay:1.28s;-ms-animation-delay:1.28s;-o-animation-delay:1.28s;animation-delay:1.28s}
+#circular3d_7G{left:0;top:18px;-webkit-animation-delay:1.44s;-moz-animation-delay:1.44s;-ms-animation-delay:1.44s;-o-animation-delay:1.44s;animation-delay:1.44s}
+#circular3d_8G{left:22px;top:0;-webkit-animation-delay:1.6s;-moz-animation-delay:1.6s;-ms-animation-delay:1.6s;-o-animation-delay:1.6s;animation-delay:1.6s}
+@-moz-keyframes bounce_circular3dG{0%{-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1)}
+100%{-webkit-transform:scale(.3);-moz-transform:scale(.3);-ms-transform:scale(.3);-o-transform:scale(.3);transform:scale(.3)}
+}@-webkit-keyframes bounce_circular3dG{0%{-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1)}
+100%{-webkit-transform:scale(.3);-moz-transform:scale(.3);-ms-transform:scale(.3);-o-transform:scale(.3);transform:scale(.3)}
+}@-o-keyframes bounce_circular3dG{0%{-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1)}
+100%{-webkit-transform:scale(.3);-moz-transform:scale(.3);-ms-transform:scale(.3);-o-transform:scale(.3);transform:scale(.3)}
+}@-ms-keyframes bounce_circular3dG{0%{-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1)}
+100%{-webkit-transform:scale(.3);-moz-transform:scale(.3);-ms-transform:scale(.3);-o-transform:scale(.3);transform:scale(.3)}
+}@keyframes bounce_circular3dG{0%{-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1)}
+100%{-webkit-transform:scale(.3);-moz-transform:scale(.3);-ms-transform:scale(.3);-o-transform:scale(.3);transform:scale(.3)}
+}
 button,.button{text-indent:0;border:0;display:inline-block;font-weight:bold;font-style:normal;line-height:2.5em;text-decoration:none;text-align:center;padding-left:1em;padding-right:1em;}
 button.smallest,.button.smallest{line-height:2em;padding:0 .6em}
 button.small,.button.small{line-height:2.25em}
@@ -92,7 +113,7 @@ header button.button .counter{margin-left:.05em;margin-right:.05em}
 footer div button{width:100%;height:inherit;background-image:none;}
 footer div button .counter{position:relative;top:-1.2000000000000002em;line-height:15px;-webkit-border-radius:4px;-moz-border-radius:4px;-webkit-border-radius:4px;-moz-border-radius:4px;-ms-border-radius:4px;-o-border-radius:4px;border-radius:4px;padding:.2em .5em .2em .5em;font-size:.9em}
 
-div[data-element="notification"]{position:absolute;top:0;bottom:0;left:0;right:0;display:none;background-color:rgba(0,0,0,0.6);z-index:400;padding-top:4em;padding-left:2em;padding-right:2em;-webkit-box-align:start;-moz-box-align:start;-ms-box-align:start;-o-box-align:start;box-align:start;-webkit-box-pack:center;-moz-box-pack:center;-ms-box-pack:center;-o-box-pack:center;box-pack:center;}
+div[data-element="notification"]{position:fixed;top:0;bottom:0;left:0;right:0;display:none;background-color:rgba(0,0,0,0.6);z-index:400;padding-top:4em;padding-left:2em;padding-right:2em;-webkit-box-align:start;-moz-box-align:start;-ms-box-align:start;-o-box-align:start;box-align:start;-webkit-box-pack:center;-moz-box-pack:center;-ms-box-pack:center;-o-box-pack:center;box-pack:center;}
 div[data-element="notification"].show{display:-webkit-box;display:-ms-box;display:-moz-box;display:box}
 div[data-element="notification"] > div.window{margin-top:200%;color:rgba(0,0,0,0.8);padding:.8em;-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;opacity:0;max-width:450px;width:80%;-webkit-transition-duration:500ms;-moz-transition-duration:500ms;-ms-transition-duration:500ms;-o-transition-duration:500ms;transition-duration:500ms;}
 div[data-element="notification"] > div.window > *{float:left}
