--- a/stylesheets/TaKo.constants.styl
+++ b/stylesheets/TaKo.constants.styl
@@ -15,6 +15,9 @@ NOTIFICATION_TRANSITION_TIME    = 500ms
 
 PROGRESSBAR_TRANSITION_TIME     = 500ms
 
+LOADER_SIZE                     = 128px
+LOADER_BALL                     = LOADER_SIZE / 3.6
+
 FOOTER_HEIGHT                   = 65px
 
 FONT_SIZE_SMALLEST              = 11px
