--- a/stylesheets/TaKo.constants.styl
+++ b/stylesheets/TaKo.constants.styl
@@ -15,8 +15,10 @@ NOTIFICATION_TRANSITION_TIME    = 500ms
 
 PROGRESSBAR_TRANSITION_TIME     = 500ms
 
-LOADER_SIZE                     = 128px
-LOADER_BALL                     = LOADER_SIZE / 3.6
+LOADER_SIZE                     = 64px
+LOADER_BALL                     = LOADER_SIZE / 10
+INIT_DELAY                      = 0.3s
+DELAY_SUM                       = INIT_DELAY / 3
 
 FOOTER_HEIGHT                   = 65px
 
