--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -69,6 +69,30 @@ div[data-element="aside_background"]
 .onright
   float right
 
+.padding.top
+  padding-top INDENT!important
+
+.padding.bottom
+  padding-bottom INDENT!important
+
+.padding.left
+  padding-left INDENT!important
+
+.padding.right
+  padding-right INDENT!important
+
+.margin.top
+  margin-top INDENT!important
+
+.margin.bottom
+  margin-bottom INDENT!important
+
+.margin.left
+  margin-left INDENT!important
+
+.margin.right
+  margin-right INDENT!important
+
 .scroll
 
   &.vertical
